# dailylens

./: .env.example  .gitignore  README.md  pyproject.toml
src/dailylens/: __init__.py  analyzer.py  capture.py  cli.py  config.py  ocr.py  prompts.py  scheduler.py  server.py  storage.py  summarizer.py
templates/: index.html
